--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -25,20 +25,6 @@ jobs:
           name: mrbeam_plugin
           path: /tmp/image.tar
 
-#  install:
-#    runs-on: ubuntu-latest
-#    needs: mrb-docker
-#    container:
-#      image: cypress/browsers:node12.18.3-chrome87-ff82
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#      - name: Cypress install
-#        uses: cypress-io/github-action@v4
-#        with:
-#          # Disable running of tests within install job
-#          runTests: false
-
   ui-chrome-tests:
     runs-on: ubuntu-latest
     container: cypress/browsers:node12.18.3-chrome87-ff82
@@ -61,7 +47,7 @@ jobs:
           apt-get --allow-releaseinfo-change update
           apt-get install docker.io -y
           docker load --input /tmp/image.tar
-          npm run docker:run
+          docker run --name mrbeam-plugin -d -p5002:5000 --network ${{ job.container.network }} mrbeam_plugin
           docker image ls -a
           sleep 95
           docker ps -a
