--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -27,7 +27,9 @@ jobs:
 
   ui-chrome-tests:
     runs-on: ubuntu-latest
-    container: cypress/browsers:node12.18.3-chrome87-ff82
+    container:
+      image: cypress/browsers:node12.18.3-chrome87-ff82
+      options: --network ${{ job.container.network }}
     needs: mrb-docker
     strategy:
       fail-fast: false
@@ -47,6 +49,7 @@ jobs:
           apt-get --allow-releaseinfo-change update
           apt-get install docker.io -y
           docker load --input /tmp/image.tar
+          echo ${{ job.container.network }}
           docker run --name mrbeam-plugin -d -p5002:5000 --network ${{ job.container.network }} mrbeam_plugin
           docker image ls -a
           sleep 95
