--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -47,8 +47,10 @@ jobs:
           apt-get --allow-releaseinfo-change update
           apt-get install docker.io -y
           docker load --input /tmp/image.tar
-          echo ${{ job.container.network }}
-          docker run --name mrbeam-plugin -d -p5002:5000 --network ${{ jobs.ui-chrome-tests.container.network }} mrbeam_plugin
+          docker network ls
+          BRIDGE_NETWORK_ID=$(docker network ls --filter=name=github_network_ --format="{{.ID}}")
+          echo $BRIDGE_NETWORK_ID
+          docker run --name mrbeam-plugin -d -p5002:5000 --network $BRIDGE_NETWORK_ID mrbeam_plugin
           docker image ls -a
           sleep 95
           docker ps -a
