--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -54,9 +54,10 @@ jobs:
           docker image ls -a
           sleep 95
           docker ps -a
+          docker image
           docker logs mrbeam-plugin
           docker inspect mrbeam-plugin -f "{{json .NetworkSettings.Networks }}"
-          docker inspect cypress/browsers:node12.18.3-chrome87-ff82 -f "{{json .NetworkSettings.Networks }}"
+          docker inspect 9c55ad422f9c49f6b817ec7a9ca50182_cypressbrowsersnode12183chrome87ff82_c6c0da -f "{{json .NetworkSettings.Networks }}"
       - name: UI Tests - Chrome
         uses: cypress-io/github-action@v4
         with:
