--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -27,7 +27,9 @@ jobs:
 
   ui-chrome-tests:
     runs-on: ubuntu-latest
-    container: cypress/browsers:node12.18.3-chrome87-ff82
+    container:
+      image: cypress/browsers:node12.18.3-chrome87-ff82
+      options: --add-host=host.docker.internal:host-gateway
     needs: mrb-docker
     strategy:
       fail-fast: false
@@ -50,12 +52,12 @@ jobs:
           docker network ls
           BRIDGE_NETWORK_ID=$(docker network ls --filter=name=github_network_ --format="{{.ID}}")
           echo $BRIDGE_NETWORK_ID
-          docker run --name mrbeam-plugin -d -p5002:5000 --net $BRIDGE_NETWORK_ID mrbeam_plugin
+          docker run --name mrbeam-plugin -d -p5002:5000 --net $BRIDGE_NETWORK_ID --add-host=host.docker.internal:host-gateway mrbeam_plugin
           docker image ls -a
           docker network inspect $BRIDGE_NETWORK_ID -f "{{json .Containers }}"
           docker network inspect bridge -f "{{json .Containers }}"
           docker inspect -f '{{ .NetworkSettings.IPAddress }}' $(docker ps -q)
-          sleep 95
+          sleep 15
           docker ps -a
           docker logs mrbeam-plugin
       - name: UI Tests - Chrome
