--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:node12.18.3-chrome87-ff82
-      options: --net bridge
+      options: --add-host=host.docker.internal:host-gateway
     needs: mrb-docker
     strategy:
       fail-fast: false
