--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -52,7 +52,7 @@ jobs:
           docker network ls
           BRIDGE_NETWORK_ID=$(docker network ls --filter=name=github_network_ --format="{{.ID}}")
           echo $BRIDGE_NETWORK_ID
-          docker run --name mrbeam-plugin -d -p5002:5000 --add-host=host.docker.internal:host-gateway mrbeam_plugin
+          docker run --name mrbeam-plugin -d -p5002:5000 --add-host=host.docker.internal:172.17.0.1 mrbeam_plugin
           docker image ls -a
           docker network inspect $BRIDGE_NETWORK_ID -f "{{json .Containers }}"
           docker network inspect bridge -f "{{json .Containers }}"
