--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:node12.18.3-chrome87-ff82
-      options: --add-host=host.docker.internal:host-gateway
+      # options: --add-host=host.docker.internal:host-gateway
     needs: mrb-docker
     strategy:
       fail-fast: false
@@ -37,6 +37,8 @@ jobs:
         # run copies of the current job in parallel
         containers: [ 1, 2, 3, 4, 5 ]
     steps:
+      - run: |
+          node -v
       - name: Checkout
         uses: actions/checkout@v2
       - name: Download artifact
@@ -52,7 +54,7 @@ jobs:
           docker network ls
           BRIDGE_NETWORK_ID=$(docker network ls --filter=name=github_network_ --format="{{.ID}}")
           echo $BRIDGE_NETWORK_ID
-          docker run --name mrbeam-plugin -d -p5002:5000 --add-host=host.docker.internal:172.17.0.1 mrbeam_plugin
+          docker run --name mrbeam-plugin -d -p5002:5000 mrbeam_plugin
           docker image ls -a
           docker network inspect $BRIDGE_NETWORK_ID -f "{{json .Containers }}"
           docker network inspect bridge -f "{{json .Containers }}"
