--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -30,7 +30,7 @@ jobs:
     container:
       image: cypress/browsers:node12.18.3-chrome87-ff82
       # options: --add-host=host.docker.internal:host-gateway
-      options: --privileged=true
+      options: -v /var/run/docker.sock:/var/run/docker.sock
     needs: mrb-docker
     strategy:
       fail-fast: false
@@ -49,8 +49,8 @@ jobs:
           path: /tmp
       - name: Load Docker image
         run: |
-          apt-get --allow-releaseinfo-change update
-          apt-get install docker.io -y
+#          apt-get --allow-releaseinfo-change update
+#          apt-get install docker.io -y
           docker load --input /tmp/image.tar
           docker network ls
           BRIDGE_NETWORK_ID=$(docker network ls --filter=name=github_network_ --format="{{.ID}}")
