--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -59,9 +59,8 @@ jobs:
           echo $BRIDGE_NETWORK_ID
           docker run --name mrbeam-plugin -d -p5002:5000 mrbeam_plugin
           docker image ls -a
-          docker network inspect $BRIDGE_NETWORK_ID -f "{{json .Containers }}"
-          docker network inspect bridge -f "{{json .Containers }}"
-          docker inspect -f '{{ .NetworkSettings.IPAddress }}' $(docker ps -q)
+          docker inspect -f '{{ .NetworkSettings.Networks }}' $(docker ps -q)
+
           sleep 15
           docker ps -a
           docker logs mrbeam-plugin
