--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -30,7 +30,7 @@ jobs:
     permissions: write-all
     container:
       image: cypress/browsers:node12.18.3-chrome87-ff82
-      options: --add-host=host.docker.internal:host-gateway
+      options: --add-host=mrbeam-plugin.org:host-gateway
       volumes:
         - /var/run/docker.sock:/var/run/docker.sock
     needs: mrb-docker
@@ -71,7 +71,7 @@ jobs:
         with:
           install: false
 #          start: npm run docker:run
-          wait-on: "http://127.0.0.1:5002/"
+          wait-on: "http://mrbeam-plugin.org:5002/"
 #          wait-on-timeout: 300
           browser: chrome
           config-file: cypress.config.js
