--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -76,8 +76,8 @@ jobs:
 #          wait-on-timeout: 300
           browser: chrome
           config-file: cypress.config.js
-          parallel: true
-          group: 'UI - Chrome'
+#          parallel: true
+#          group: 'UI - Chrome'
           spec: cypress/e2e/*
         env:
           # Recommended: pass the GitHub token lets this action correctly
