--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "mochawesome-report-generator": "^3.1.5"
   },
   "dependencies": {
-    "cypress-real-events": "^1.7.2"
+    "cypress-real-events": "^1.7.2",
+    "globby": "^13.1.2",
+    "ts-node": "^10.9.1"
   },
   "scripts": {
     "docker:build": "docker build -t mrbeam_plugin .\n",
