--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "cypress-real-events": "^1.7.2",
     "globby": "^13.1.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "docker:build": "docker build -t mrbeam_plugin .\n",
