--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "globby": "^13.1.2",
     "ts-node": "^10.9.1",
     "ts-node-debug": "^1.1.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "scripts": {
