--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cypress-real-events": "^1.7.2",
     "globby": "^13.1.2",
+    "minimatch": "^5.1.0",
     "ts-node": "^10.9.1",
     "ts-node-debug": "^1.1.0",
     "ts-node-dev": "^2.0.0",
