--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.1",
+    "@types/minimatch": "^5.1.2",
     "cypress": "^10.11.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-iframe": "^1.0.1",
