--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions: write-all
     container:
-      image: cypress/browsers:node12.18.3-chrome87-ff82
+      image: cypress/node16.17.0-chrome106
       options: --add-host=mrbeam-plugin.org:host-gateway
       volumes:
         - /var/run/docker.sock:/var/run/docker.sock
