--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -47,6 +47,8 @@ jobs:
         with:
           name: mrbeam_plugin
           path: /tmp
+      - run : |
+          npm upgrade
       - name: Load Docker image
         run: |
           apt-get --allow-releaseinfo-change update
