--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "mocha": "^5.2.0",
     "mochawesome": "^3.1.2",
     "mochawesome-merge": "^1.0.7",
-    "mochawesome-report-generator": "^3.1.5"
-  },
-  "dependencies": {
+    "mochawesome-report-generator": "^3.1.5",
     "cypress-real-events": "^1.7.2",
     "fs.promises": "^0.1.2",
     "globby": "11.0.4",
@@ -20,6 +18,8 @@
     "ts-node-debug": "^1.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
   },
   "scripts": {
     "docker:build": "docker build -t mrbeam_plugin .\n",
