Fix adding dollar sign

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -36,7 +36,7 @@ jobs:
     permissions: write-all
     container:
       image: cypress/browsers:node16.17.0-chrome106
-      options: --add-host={{ env.MRBEAM_PLUGIN_DOMAIN_NAME }}:host-gateway
+      options: --add-host=${{ env.MRBEAM_PLUGIN_DOMAIN_NAME }}:host-gateway
       volumes:
         - /var/run/docker.sock:/var/run/docker.sock
     needs: mrb-docker
