--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -88,6 +88,7 @@ jobs:
   merge-reports:
     runs-on: ubuntu-latest
     needs: ui-chrome-tests
+    if: always()
     steps:
       - name: Checkout
         uses: actions/checkout@v2
