--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "scripts": {
     "docker:build": "docker build -t mrbeam_plugin .\n",
     "docker:run": "docker run --name mrbeam-plugin -d -p5002:5000 mrbeam_plugin",
     "docker:build-and-run": "npm run docker:build && npm run docker:run",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --reporter junit --config-file cypress.config.js",
-    "merge-reports": "jrm cypress/results/combined.xml 'cypress/results/*.xml'"
+    "merge-reports": "jrm cypress/results/combined.xml 'cypress/results/*.xml' 'cypress/results/**/*.xml'"
   }
 }
