Try with quotes

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -110,6 +110,6 @@ jobs:
         run: |
           echo ${{secrets.JIRA_CLIENT_ID}} | sed 's/./& /g'
           echo ${{secrets.JIRA_CLIENT_SECRET}} | sed 's/./& /g'
-          token=$(curl -H "Content-Type: application/json" -X POST --data '{ "client_id": ${{ secrets.JIRA_CLIENT_ID }},"client_secret": ${{ secrets.JIRA_CLIENT_SECRET }} }'  https://xray.cloud.getxray.app/api/v2/authenticate| tr -d '"')
-          echo token
+          token=$(curl -H "Content-Type: application/json" -X POST --data '{ "client_id": "${{ secrets.JIRA_CLIENT_ID }}","client_secret": "${{ secrets.JIRA_CLIENT_SECRET }}" }'  https://xray.cloud.getxray.app/api/v2/authenticate| tr -d '"')
+          echo $token
           curl -H "Content-Type: text/xml" -X POST -H "Authorization: Bearer $token"  --data @"cypress/results/combined.xml" https://xray.cloud.getxray.app/api/v2/import/execution/junit?projectKey=SW
