--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -107,6 +107,15 @@ jobs:
           npm install --only=dev
           npm run merge-reports
       - name: Import to Xray
+        id: xray
         run: |
           token=$(curl -H "Content-Type: application/json" -X POST --data '{ "client_id": "${{ secrets.JIRA_CLIENT_ID }}","client_secret": "${{ secrets.JIRA_CLIENT_SECRET }}" }'  https://xray.cloud.getxray.app/api/v2/authenticate| tr -d '"')
-          curl -H "Content-Type: text/xml" -X POST -H "Authorization: Bearer $token"  --data @"cypress/results/combined.xml" https://xray.cloud.getxray.app/api/v2/import/execution/junit?projectKey=SW
+          response=$(curl -H "Content-Type: text/xml" -X POST -H "Authorization: Bearer $token"  --data @"cypress/results/combined.xml" https://xray.cloud.getxray.app/api/v2/import/execution/junit?projectKey=SW)
+          echo "response=response" >> $GITHUB_OUTPUT
+      - name: Change issue summary and description
+        run: |
+          echo ${{ steps.xray.outputs.response }}
+          issue_url=$(printf '%s\n' "${{ steps.xray.outputs.response }}" | jq -r .self)
+          echo $issue_url
+
+          curl -D- -u ${{ secrets.JIRA_SW_EMAIL }}:${{ secrets.JIRA_SW_API_TOKEN }} -X PUT '$issue_url' -H 'Content-Type: application/json' --data '{"fields": {"summary": "Iratxe test 3"}}'
