--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -120,10 +120,10 @@ jobs:
       - name: Change issue summary and description
         run: |
           echo ${{ steps.xray.outputs.response }}
-          issue_url=$(printf '%s\n' '${{ steps.xray.outputs.response }}' | jq -r .self)
-          echo $issue_url
+          echo "ISSUE_URL=$(printf '%s\n' '${{ steps.xray.outputs.response }}' | jq -r .self)" >> $GITHUB_ENV
+          echo $ISSUE_URL
           echo ${{ github.event.release.tag_name }}
-          issue_name="Test plan for ${{ github.event.release.tag_name }}"
-          echo $issue_name
+          echo "ISSUE_NAME='Test plan for ${{ github.event.release.tag_name }}'" >> $GITHUB_ENV
+          echo $ISSUE_NAME
 
-          curl -D- -u ${{ secrets.JIRA_SW_EMAIL }}:${{ secrets.JIRA_SW_API_TOKEN }} -X PUT $issue_url -H 'Content-Type: application/json' --data '{"fields": {"summary": $issue_name}}'
+          curl -D- -u ${{ secrets.JIRA_SW_EMAIL }}:${{ secrets.JIRA_SW_API_TOKEN }} -X PUT $ISSUE_URL -H 'Content-Type: application/json' --data '{"fields": {"summary": $ISSUE_NAME}}'
