--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -122,8 +122,8 @@ jobs:
           echo ${{ steps.xray.outputs.response }}
           issue_url=$(printf '%s\n' '${{ steps.xray.outputs.response }}' | jq -r .self)
           echo $issue_url
-          echo ${{ github.event.head_commit.message }}
-          issue_name=$"Test plan for ${{ github.event.head_commit.message }}"
+          echo ${{ github.event.release.tag_name }}
+          issue_name="Test plan for ${{ github.event.release.tag_name }}"
           echo $issue_name
 
           curl -D- -u ${{ secrets.JIRA_SW_EMAIL }}:${{ secrets.JIRA_SW_API_TOKEN }} -X PUT $issue_url -H 'Content-Type: application/json' --data '{"fields": {"summary": $issue_name}}'
