--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -126,4 +126,4 @@ jobs:
           issue_name="Test plan for ${{ github.event.head_commit.message }}"
           echo $issue_name
 
-          curl -D- -u ${{ secrets.JIRA_SW_EMAIL }}:${{ secrets.JIRA_SW_API_TOKEN }} -X PUT $issue_url -H 'Content-Type: application/json' --data '{"fields": {"summary": $issue_name }}'
+          curl -D- -u ${{ secrets.JIRA_SW_EMAIL }}:${{ secrets.JIRA_SW_API_TOKEN }} -X PUT $issue_url -H 'Content-Type: application/json' --data '{"fields": {"summary": "'"$issue_name"'" }}'
