--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.1",
-    "cypress": "^11.0.1",
+    "cypress": "^11.1.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-iframe": "^1.0.1",
     "junit-report-merger": "^4.0.0",
@@ -11,6 +11,7 @@
     "mochawesome-report-generator": "^3.1.5"
   },
   "dependencies": {
+    "cypress-drag-drop": "^1.1.1",
     "cypress-real-events": "^1.7.2"
   },
   "scripts": {
