--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -118,13 +118,39 @@ jobs:
           token=$(curl -H "Content-Type: application/json" -X POST --data '{ "client_id": "${{ secrets.JIRA_CLIENT_ID }}","client_secret": "${{ secrets.JIRA_CLIENT_SECRET }}" }'  https://xray.cloud.getxray.app/api/v2/authenticate| tr -d '"')
           response=$(curl -H "Content-Type: text/xml" -X POST -H "Authorization: Bearer $token"  --data @"cypress/results/combined.xml" https://xray.cloud.getxray.app/api/v2/import/execution/junit?projectKey=SW)
           echo "response=$response" >> $GITHUB_OUTPUT
-      - name: Change issue summary and description
+      - name: Change issue summary and add link
+        # issue_url: extracts the newly created test execution issue url from the previous response
+        # issue_name: contains the latest commit message. Should be something like "SW-1234 summary"
+        # tests_issue: extracts the "SW-1234" from the commit message, to add it as a link to the text execution issue
         run: |
-          echo ${{ steps.xray.outputs.response }}
           issue_url=$(printf '%s\n' '${{ steps.xray.outputs.response }}' | jq -r .self)
           echo $issue_url
-          echo ${{ github.event.head_commit.message }}
+
           issue_name="Test plan for ${{ github.event.head_commit.message }}"
           echo $issue_name
 
-          curl -D- -u ${{ secrets.JIRA_SW_EMAIL }}:${{ secrets.JIRA_SW_API_TOKEN }} -X PUT $issue_url -H 'Content-Type: application/json' --data '{"fields": {"summary": "'"$issue_name"'" }}'
+          tests_issue=$(echo ${{ github.event.head_commit.message }} | sed -E -e 's/.*(SW-[0-9]+).*/\1/g')
+          echo $tests_issue
+
+          curl -D- -u ${{ secrets.JIRA_SW_EMAIL }}:${{ secrets.JIRA_SW_API_TOKEN }} -X PUT $issue_url -H 'Content-Type: application/json' \
+            --data \
+              '{
+                "fields": {
+                  "summary": "'"$issue_name"'"
+                },
+                "update": {
+                  "issuelinks": [
+                    {
+                      "add": {
+                        "type": {
+                          "name":"Test",
+                          "outward":"tests"
+                        },
+                        "outwardIssue" : {
+                          "key": "'"$tests_issue"'"
+                        }
+                      }
+                    }
+                  ]
+                }
+              }'
