--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -119,7 +119,7 @@ jobs:
         run: |
           token=$(curl -H "Content-Type: application/json" -X POST --data '{ "client_id": "${{ secrets.JIRA_CLIENT_ID }}","client_secret": "${{ secrets.JIRA_CLIENT_SECRET }}" }'  https://xray.cloud.getxray.app/api/v2/authenticate| tr -d '"')
           xray_import_response=$(curl -H "Content-Type: text/xml" -X POST -H "Authorization: Bearer $token"  --data @"cypress/results/combined.xml" https://xray.cloud.getxray.app/api/v2/import/execution/junit?projectKey=SW)
-          echo "xray_import_response=xray_import_response" >> $GITHUB_OUTPUT
+          echo "xray_import_response=$xray_import_response" >> $GITHUB_OUTPUT
       - name: Change issue summary and add link
         # issue_url: extracts the newly created test execution issue url from the previous response
         # issue_name: contains the latest commit message. Should be something like "SW-1234 summary"
