--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -8,8 +8,9 @@ on:
       - stable
 
 env:
-  CYPRESS_TEST_USER_EMAIL: "dev@mr-beam.org"
-  CYPRESS_TEST_USER_PASSWORD: "a"
+  CYPRESS_TEST_USER_EMAIL: ${{ secrets.CYPRESS_TEST_USER_EMAIL }}
+  CYPRESS_TEST_USER_PASSWORD: ${{ secrets.CYPRESS_TEST_USER_PASSWORD }}
+  CYPRESS_TEST_DESIGN_STORE_TOKEN: ${{ secrets.CYPRESS_TEST_DESIGN_STORE_TOKEN }}
   # These two are just for internal use, to wire the container network
   MRBEAM_PLUGIN_URL: "http://plugin-address.org:5002/"
   MRBEAM_PLUGIN_DOMAIN_NAME: "plugin-address.org"
