--- a/package.json
+++ b/package.json
@@ -2,24 +2,25 @@
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.1",
     "@types/minimatch": "^5.1.2",
-    "cypress": "^10.11.0",
+    "cy-verify-downloads": "^0.1.11",
+    "cypress": "^11.2.0",
     "cypress-file-upload": "^5.0.8",
+    "cypress-if": "^1.10.2",
     "cypress-iframe": "^1.0.1",
+    "cypress-real-events": "^1.7.2",
+    "fs.promises": "^0.1.2",
+    "globby": "11.0.4",
     "junit-report-merger": "^4.0.0",
+    "minimatch": "^5.1.0",
     "mocha": "^5.2.0",
     "mochawesome": "^3.1.2",
     "mochawesome-merge": "^1.0.7",
     "mochawesome-report-generator": "^3.1.5",
-    "cypress-real-events": "^1.7.2",
-    "fs.promises": "^0.1.2",
-    "globby": "11.0.4",
-    "minimatch": "^5.1.0",
     "ts-node": "^10.9.1",
     "ts-node-debug": "^1.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
-  "dependencies": {},
   "scripts": {
     "docker:build": "docker build -t mrbeam_plugin .\n",
     "docker:run": "docker run --name mrbeam-plugin -d -p5002:5000 mrbeam_plugin",
