Fix variable calls

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -146,7 +146,7 @@ jobs:
           tested_issue_assignee=$(printf '%s' $tested_issue_details | jq --raw-output .fields.assignee.accountId)
           echo $tested_issue_assignee
 
-          tested_issue_fix_version=$(printf '%s' '$tested_issue_details' | jq -r .fields.fixVersions[].name)
+          tested_issue_fix_version=$(printf '%s' $tested_issue_details | jq -r .fields.fixVersions[].name)
           echo $tested_issue_fix_version
 
           curl -D- -u ${{ secrets.JIRA_SW_EMAIL }}:${{ secrets.JIRA_SW_API_TOKEN }} \
@@ -155,7 +155,7 @@ jobs:
               '{
                 "fields": {
                   "summary": "[GitHub:Cypress] '"$test_exec_summary"'",
-                  "assignee": { "accountId": "$tested_issue_assignee" }
+                  "assignee": { "accountId": "'"$tested_issue_assignee"'" }
                 },
                 "update": {
                   "issuelinks": [
@@ -173,7 +173,7 @@ jobs:
                   ],
                   "fixVersions": [
                     {
-                      "add": {"name": "'"tested_issue_fix_version"'"}
+                      "add": {"name": "'"$tested_issue_fix_version"'"}
                     }
                   ]
                 }
