UPD: e2e maybe finally version

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/minimatch": "^5.1.2",
     "cy-verify-downloads": "^0.1.11",
     "cypress": "^11.2.0",
+    "cypress-delete-downloads-folder": "^0.0.2",
     "cypress-file-upload": "^5.0.8",
     "cypress-if": "^1.10.2",
     "cypress-iframe": "^1.0.1",
