SW-2442 Added comments and fixed typos

--- a/.github/workflows/deployment-development.yml
+++ b/.github/workflows/deployment-development.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           token: '${{ github.token }}'
           environment: development
-
+      # This step could be used in the future to notify or trigger another action
       - name: Deploy my app
         run: |
           # add your deployment code here
